@@ -390,6 +390,7 @@ Version 1.5.0beta45 [August 26, 2010]
 
 Version 1.5.0beta46 [August 26, 2010]
   Added new private header files to libpng_sources in CMakeLists.txt
+  Added PNG_WRITE_16BIT_SUPPORTED option.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net:
 (subscription required; visit
