@@ -39,6 +39,7 @@
 #define PNG_WARNINGS_SUPPORTED
 #define PNG_FLOATING_ARITHMETIC_SUPPORTED
 #define PNG_WRITE_SUPPORTED
+#define PNG_WRITE_16BIT_SUPPORTED
 #define PNG_WRITE_INTERLACING_SUPPORTED
 #define PNG_EASY_ACCESS_SUPPORTED
 #define PNG_ALIGN_MEMORY_SUPPORTED
