@@ -29,7 +29,7 @@ PNG_DEFN_MAGIC-;OS2 DESCRIPTION	"PNG image compression library"-PNG_DEFN_END
 PNG_DEFN_MAGIC-;OS2 CODE		PRELOAD MOVEABLE DISCARDABLE-PNG_DEFN_END
 PNG_DEFN_MAGIC--PNG_DEFN_END
 PNG_DEFN_MAGIC-EXPORTS-PNG_DEFN_END
-PNG_DEFN_MAGIC-;Version PNGLIB_VERSION-PNG_DEFN_END
+PNG_DEFN_MAGIC-;Version 1.5.0beta46-PNG_DEFN_END
 
 /* Read the defaults, but use scripts/pnglibconf.h.prebuilt; the 'standard'
  * header file.
